feat(account-cmd): open accounts endpoint