@@ -67,4 +67,8 @@ subprojects {
     tasks.withType(Test) {
         jvmArgs += "--enable-preview"
     }
+
+    tasks.withType(JavaExec) {
+        jvmArgs += "--enable-preview"
+    }
 }
